--- a/Counselor/templates/counselor/add.html
+++ b/Counselor/templates/counselor/add.html
@@ -5,10 +5,6 @@
     <title></title>
   </head>
   <body>
-    {% if user.is_staff %}
-    <h1>You're a staff user</h1>
-    {% else %}
-    <h1>You're a normal user</h1>
-    {% endif %}
+    <h1>Add</h1>
   </body>
 </html>
