--- a/student/templates/student/profile.html
+++ b/student/templates/student/profile.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h2>Welcome {{profile.name}}</h2>
-    <h2>{{profile.sat}}</h2>
+    <h2>Welcome {{ current_user.studentprofile.name }}</h2>
+    <h2>{{current_user.studentprofile.sat}}</h2>
   </body>
 </html>
