--- a/student/templates/student/changePassword.html
+++ b/student/templates/student/changePassword.html
@@ -35,30 +35,19 @@
     </ul>
   </div>
 </nav>
-    <h2>Welcome {{ profile.name }}</h2>
-    <h2>{{current_user.studentprofile.sat}}</h2>
-    <form class="" action="{% url 'profile' %}" method="post">
-{% csrf_token %}
-      <input type="text" name="username" id="username" value="" placeholder="Name">
-      <input type="email" name="email" id="email" value="" placeholder="Email">
-      <input type="text" name="school" id = "school" value="" placeholder="school">
-      <input type="submit" name="" value="">
-    </form>
-
-    <button type="button" name="button"> <a href="{% url 'changePassword' %}">Change Password</a> </button>
+{% if error %}
+<h1>{{error}}</h1>
+<br>
+{% endif %}
+<form class="" action="{% url 'changePassword' %}" method="post">
+  {% csrf_token %}
+  Current Password:
+  <input type="password" name="current" value=""> <br>
+  New Password:
+  <input type="password" name="new" value=""> <br>
+  New Password Again:
+  <input type="password" name="newVerify" value=""> <br>
+  <input type=submit name="" value="Submit!">
+</form>
   </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script>
-
-  $( document ).ready(function() {
-      // after the page elements are all loaded, then run the script
-      // Set the input field with unique ID #email to a value
-      $("#email").val("{{profile.email}}");
-      // Set the input field with unique ID #name
-      $("#username").val("{{profile.name}}");
-      $("#school").val("{{profile.school}}");
-
-      });
-
-</script>
 </html>
