--- a/student/templates/student/activity.html
+++ b/student/templates/student/activity.html
@@ -35,30 +35,24 @@
     </ul>
   </div>
 </nav>
-    <h2>Welcome {{ profile.name }}</h2>
-    <h2>{{current_user.studentprofile.sat}}</h2>
-    <form class="" action="{% url 'profile' %}" method="post">
-{% csrf_token %}
-      <input type="text" name="username" id="username" value="" placeholder="Name">
-      <input type="email" name="email" id="email" value="" placeholder="Email">
-      <input type="text" name="school" id = "school" value="" placeholder="school">
-      <input type="submit" name="" value="">
-    </form>
+{{activity}}
+<br> <br> <br>
+{% if error %}
+<h1>{{error}}</h1>
+<br>
+{% endif %}
 
-    <button type="button" name="button"> <a href="{% url 'changePassword' %}">Change Password</a> </button>
+<form class="" action="{% url 'activity' %}" method="post">
+  {% csrf_token %}
+  <input type="text" name="name" value="" placeholder="Name of Org.">
+  <input type="text" name="category" value="" placeholder="category">
+  <input type="text" name="grades" value="" placeholder="Grades">
+  <input type="text" name="position" value="">
+  <input type="number" name="hoursperweek" value="" placeholder="Hours Per Week">
+  <input type="number" name="weeksperyear" value="" placeholder="weeks per year">
+  <input type="text" name="awards" value="" placeholder="awards">
+  <input type="text" name="description" value="" placeholder="description">
+  <input type="submit" name="" value="Submit!">
+</form>
   </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script>
-
-  $( document ).ready(function() {
-      // after the page elements are all loaded, then run the script
-      // Set the input field with unique ID #email to a value
-      $("#email").val("{{profile.email}}");
-      // Set the input field with unique ID #name
-      $("#username").val("{{profile.name}}");
-      $("#school").val("{{profile.school}}");
-
-      });
-
-</script>
 </html>
