--- a/student/templates/student/essays.html
+++ b/student/templates/student/essays.html
@@ -5,14 +5,45 @@
     <title></title>
   </head>
   <body>
-<h1>Add an Essay</h1>
 
-    <form class="" action="index.html" method="post">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="{% url 'Home' %}">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'studentHome' %}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'viewEssay' %}">Essays</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'testing' %}">Standardised Testing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'activity' %}">Activities</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'transcripts' %}">School Transcripts</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'lor' %}">LORs</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<h1>Add an Essay</h1>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <form class="" action="{% url 'addEssay' %}" method="post">
       {% csrf_token %}
       <input type="text" name="name" value="" placeholder="Title of the Essay">
       <input type="text" name="link" value="" placeholder="Link to the essay">
       <input type="date" name="date" value="" placeholder="Deadline">
-      <input type="submit" name="submit" value="Submit">
+      <input type="submit" name="submit" value="">
     </form>
   </body>
 </html>
