--- a/student/templates/student/changePassword.html
+++ b/student/templates/student/changePassword.html
@@ -8,15 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'Home' %}">Home</a>
+  <a class="navbar-brand" href="{% url 'studentHome' %}">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'studentHome' %}">Home</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'viewEssay' %}">Essays</a>
       </li>
@@ -34,7 +31,7 @@
       </li>
     </ul>
   </div>
-</nav>
+  </nav>
 {% if error %}
 <h1>{{error}}</h1>
 <br>
