--- a/student/templates/student/profile.html
+++ b/student/templates/student/profile.html
@@ -8,15 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'Home' %}">Home</a>
+  <a class="navbar-brand" href="{% url 'studentHome' %}">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'studentHome' %}">Home</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'viewEssay' %}">Essays</a>
       </li>
@@ -34,15 +31,15 @@
       </li>
     </ul>
   </div>
-</nav>
+  </nav>
     <h2>Welcome {{ profile.name }}</h2>
     <h2>{{current_user.studentprofile.sat}}</h2>
     <form class="" action="{% url 'profile' %}" method="post">
 {% csrf_token %}
-      <input type="text" name="username" id="username" value="" placeholder="Name">
-      <input type="email" name="email" id="email" value="" placeholder="Email">
-      <input type="text" name="school" id = "school" value="" placeholder="school">
-      <input type="submit" name="" value="">
+      <input type="text" name="username" id="username" value="" placeholder="Name"> <br>
+      <input type="email" name="email" id="email" value="" placeholder="Email"> <br>
+      <input type="text" name="school" id = "school" value="" placeholder="school"> <br>
+      <input type="submit" name="" value="Reset Details">
     </form>
 
     <button type="button" name="button"> <a href="{% url 'changePassword' %}">Change Password</a> </button>
