--- a/student/templates/student/studenthome.html
+++ b/student/templates/student/studenthome.html
@@ -8,17 +8,13 @@
   </head>
   <body>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'Home' %}">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="{% url 'studentHome' %}">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'studentHome' %}">Home</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'viewEssay' %}">Essays</a>
       </li>
@@ -35,7 +31,7 @@
         <a class="nav-link" href="{% url 'lor' %}">LORs</a>
       </li>
     </ul>
-  </div>
-  </nav>
+    </div>
+    </nav>
   </body>
 </html>
