--- a/student/templates/student/viewscores.html
+++ b/student/templates/student/viewscores.html
@@ -6,13 +6,12 @@
   </head>
   <body>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'studentHome' %}">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="{% url 'studentHome' %}">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="{% url 'viewEssay' %}">Essays</a>
@@ -30,18 +29,43 @@
         <a class="nav-link" href="{% url 'lor' %}">LORs</a>
       </li>
     </ul>
-  </div>
-  </nav>
-
-{% for i in lor.all %}
-<h1>{{i.recommender}}</h1>
-<iframe src="{{i.lor.url}}" width="" height=""></iframe>
-{% endfor %}
-<br> <br> <br>
+    </div>
+    </nav>
 {% if error %}
-<h1 style="color:black;">{{error}}</h1>
+
+<h1>{{error}}</h1>
 <br>
 {% endif %}
-<button type="button" name="button"> <a style="color:black;" href="{% url 'addlor' %}"> ADD LOR</a></button>
+
+<br><br>
+
+ACT
+<div class="">
+  {% for i in scores.all %}
+  {{i.date}}
+  {%endfor%}
+
+</div>
+<br>
+SAT
+<div class="">
+  {% for i in sat.all %}
+  {{i.date}}
+  {%endfor%}
+
+</div>
+<br>
+Subject Tests
+
+<div class="">
+  {% for i in subject.all %}
+  {{i.date}}
+  {%endfor%}
+
+</div>
+
+
+<button type="button" name="button"> <a href="{% url 'testing' %}"> Add a score </a> </button>
+
   </body>
 </html>
