--- a/student/templates/student/viewLOR.html
+++ b/student/templates/student/viewLOR.html
@@ -5,7 +5,6 @@
     <title></title>
   </head>
   <body>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -19,28 +18,32 @@
         <a class="nav-link" href="{% url 'viewEssay' %}">Essays</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'testing' %}">Standardised Testing</a>
+        <a class="nav-link" href="{% url 'viewTesting' %}">Standardised Testing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'activity' %}">Activities</a>
+        <a class="nav-link" href="{% url 'viewActivity' %}">Activities</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'transcripts' %}">School Transcripts</a>
+        <a class="nav-link" href="{% url 'viewTranscripts' %}">School Transcripts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'lor' %}">LORs</a>
+        <a class="nav-link" href="{% url 'viewLOR' %}">LORs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'invitations' %}">LORs</a>
       </li>
     </ul>
   </div>
   </nav>
-<h1>Add an Essay</h1>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <form class="" action="{% url 'addEssay' %}" method="post">
-      {% csrf_token %}
-      <input type="text" name="name" value="" placeholder="Title of the Essay">
-      <input type="text" name="link" value="" placeholder="Link to the essay">
-      <input type="date" name="date" value="" placeholder="Deadline">
-      <input type="submit" name="submit" value="">
-    </form>
+{% for i in lor.all %}
+<h1>{{i.recommender}}</h1>
+
+{% endfor %}
+<br> <br> <br>
+{% if error %}
+<h1 style="color:black;">{{error}}</h1>
+<br>
+{% endif %}
+<button type="button" name="button"> <a style="color:black;" href="{% url 'addLOR' %}"> ADD LOR</a></button>
   </body>
 </html>
