--- a/Checklist/templates/Checklist/login.html
+++ b/Checklist/templates/Checklist/login.html
@@ -5,10 +5,15 @@
 
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+      .spec{
+        margin-bottom:20px;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'Home' %}">Home</a>
+  <a class="navbar-brand" href="{% url 'Login' %}">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -27,7 +32,7 @@
   </nav>
   <div class="conatiner" style="width:30%;margin:0 auto;margin-top: 150px;">
 
-
+<h1 class="text-center spec">Common Checklist</h1>
   <form method="post" action="{% url 'Login'%}">
     {% csrf_token %}
   <div class="form-group">
