--- a/Checklist/templates/Checklist/signup.html
+++ b/Checklist/templates/Checklist/signup.html
@@ -19,7 +19,7 @@
 <br>
 {% endif %}
   </head>
-  <body class="needed">
+  <body style="margin-top:50px;"class="needed">
     <h1>SignUp</h1>
     <form class="container form-group needed" action="{% url 'Signup' %}" method="post"><br>
       {% csrf_token %}
