--- a/Checklist/templates/Checklist/addScores.html
+++ b/Checklist/templates/Checklist/addScores.html
@@ -9,7 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="{% static 'super.css' %}">
-		<link rel="stylesheet" href="{% static 'footer.css' %}">
+		<link rel="stylesheet" href="{% static 'footer.css' %}">    <script src="https://use.fontawesome.com/977b0e453b.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Add Scores</title>
   </head>
 	<style media="screen">
@@ -73,7 +74,8 @@
 		}
 	</style>
   <body>
-    <div class="main-content">
+  <div class="main-content">
+  <a href="{% url 'studentHome' %}"><i style="margin-bottom: 20px;float: right;"class="fa fa-home fa-2x"></i></a>
 			<h3> Add scores </h3>
 			<h4> Here are some recommended sites with standardised-testing resources </h4>
 			<a href="https://www.khanacademy.org/sat"> Khan Academy </a> <br>
