--- a/Checklist/templates/Checklist/profile.html
+++ b/Checklist/templates/Checklist/profile.html
@@ -10,7 +10,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'super.css' %}">
-		<link rel="stylesheet" href="{% static 'footer.css' %}">
+		<link rel="stylesheet" href="{% static 'footer.css' %}">    <script src="https://use.fontawesome.com/977b0e453b.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>View activities</title>
   </head>
 	<style media="screen">
@@ -54,7 +55,13 @@
 		}
 	</style>
   <body>
-    <div class="main-content">
+    {% if user == profile_user or user == profile_user.studentprofile.counselor.user %}
+  <div class="main-content">
+    {% if user.is_staff %}
+  <a href="{% url 'counselorHome' %}"><i style="margin-bottom: 20px;float: right;"class="fa fa-home fa-2x"></i></a>
+  {% else %}
+<a href="{% url 'studentHome' %}"><i style="margin-bottom: 20px;float: right;"class="fa fa-home fa-2x"></i></a>
+{% endif %}
 			<h3> View profile </h3>
       <br>
 			<h5> Essays </h5>
@@ -137,6 +144,11 @@
 			  </table>
 			</div>
 		</div>
+    {% else %}
+    <h1> You are not eligible to view this page</h1>
+    <!-- <span>{{ user.username }}</span>
+    <span>{{ profile_user.studentprofile.counselor.user }} </span> -->
+    {% endif %}
 		<!-- Site footer -->
 
 
